--- a/css/style.css
+++ b/css/style.css
@@ -554,14 +554,14 @@ main .wrapper .block7 article h3 {
     color: #2c2c2c;
     font-size: 24px;
     margin-top: 25px;
-    width: 323px;
+    width: 80%;
 }
 
 main .wrapper .block7 article p {
     font-size: 16px;
     color: #9c9b9b;
     margin-top: 15px;
-    width: 323px;
+    width: 80%;
 }
 
 main .wrapper .block7 footer {
